# Kaggle-Capstone-Project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AND_STACK.md  README.md  ROADMAP.md  docker-compose.yml
.agents/: AGENTS.md
.github/workflows/: deploy-hf-spaces.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/agents/: advocate.py  arbitrator.py  challenger.py  detective.py  graph.py  prompts.py  tools.py
backend/app/: main.py
backend/app/api/: auth.py  users.py
backend/app/core/: config.py  state.py
backend/app/db/: cache.py  models.py  session.py
backend/app/graph/: workflow.py
backend/app/graph/nodes/: __init__.py  difficulty_agent.py  discovery_agent.py  doc_expert_agent.py  learning_gap_agent.py  mentor_agent.py  profile_agent.py
backend/app/mcp/: doc_client.py  github_client.py
backend/app/tools/: issue_complexity.py  learning_resource_finder.py  skills_loader.py  technology_detection.py
backend/auth/: email.py  router.py  schemas.py  security.py
backend/core/: config.py  llm.py
backend/db/: cleanup.py  database.py  migrations.sql  models.py
backend/skills/: python.md  react.md
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentStreamUI.tsx  ChatResult.tsx  ChatSidebar.tsx  Preferences.tsx  RepositoryCard.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/contexts/: AuthContext.tsx  (+1 more)
(+18 files in other folders)
